# otto-recsys

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  __init__.py  cli.py  create_covisits_gpu.py  create_user_item_features.py  generate_candidates_gpu.py  inference.py  otto_recsys.py  pipeline.sh  pipeline_inference_ranker.sh  pipeline_train_ranker.sh  process_candidate_df.py  pyproject.toml  rank_candidates.py  setup.cfg  setup.py  tox.ini  train_word2vec_model.py
.github/: ISSUE_TEMPLATE.md
conf/: config.yaml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
notebooks/: Otto-Recsys-Comparison.ipynb  Otto-Recsys-DataLoading-EDA.ipynb  Otto-Recsys-Modelling-cudf.ipynb  Otto-Recsys-Modelling.ipynb  Otto-Recsys-Ranking-candidate-dataframe.ipynb  Otto-Recsys-Ranking-modelling.ipynb  Otto-Recsys-User-Modelling.ipynb  Otto-Recsys-word2vec.ipynb
src/: add_targets_to_candidate_df.py  candidate-generation-lgbm-ranker-model.ipynb  combine_candidates_user_item_features.py  create_candidates_df.py  create_covisits_gpu.py  create_user_item_features.ipynb  create_user_item_features.py  inference.py  train_word2vec_model.py
tests/: __init__.py  test_otto_recsys.py
utils/: evaluate.py  labels.py  submit.py  test_set.py
